--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -35,7 +35,7 @@ h2 {
 }
 
 p.date {
-    color:#ccc;
+    color:#ссc;
     font-family: georgia, serif;
     font-size: 12px;
     font-style: italic;
