--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -15,5 +15,6 @@
         </p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
+<!--{% include "pagination.html" with page=page_obj %} for class View-->
     {% include "pagination.html" with page=posts %}
 {% endblock %}
